# mle-project-sprint-4-v001

./: .env.template  .gitignore  Dockerfile  README.md  compose.yml  config.py  justfile  pyproject.toml  pytest.ini  recommendations.ipynb  recommendations_service.py  settings.py  test_service.py  warm_history.py
monitoring/: prometheus.yaml
monitoring/dashboard/: dashboards.json
monitoring/grafana/provisioning/dashboards/: recsys.yaml
scripts/: als_recs.py
