[project]
name = "mle-project-sprint-4-v001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42,<2",
    "catboost>=1.2.3,<2",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "fastapi==0.104.1",
    "implicit==0.7.2",
    "jupyterlab>=4.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas==2.1.1",
    "prometheus-client>=0.23.1",
    "psutils>=3.3.11",
    "pyarrow>=14,<20",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "seaborn==0.12.1",
    "slowapi>=0.1.9",
    "uvicorn[standard]",
]
